feat: implement question answering.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
 
-  haystack-api:
+  haystack-api-doc-retrieval:
     image: "deepset/haystack:cpu"
     volumes:
       - ./pipelines/:/opt/pipelines
@@ -9,7 +9,25 @@ services:
     restart: on-failure
     environment:
       - DOCUMENTSTORE_PARAMS_HOST=elasticsearch
-      - PIPELINE_YAML_PATH=/opt/pipelines/document-search.haystack-pipeline.yml
+      - PIPELINE_YAML_PATH=/opt/pipelines/doc-retrieval.haystack-pipeline.yml
+      - TOKENIZERS_PARALLELISM=false
+      # Uncomment the following line to customise how much time (in seconds) a worker can spend serving a request
+      # before it times out. This should include the time required to cache the models and setup the pipelines.
+      - GUNICORN_CMD_ARGS="--timeout=3000"
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+
+  haystack-api-qa:
+    image: "deepset/haystack:cpu"
+    volumes:
+      - ./pipelines/:/opt/pipelines
+    ports:
+      - 8000:8000
+    restart: on-failure
+    environment:
+      - DOCUMENTSTORE_PARAMS_HOST=elasticsearch
+      - PIPELINE_YAML_PATH=/opt/pipelines/qa.haystack-pipeline.yml
       - TOKENIZERS_PARALLELISM=false
       # Uncomment the following line to customise how much time (in seconds) a worker can spend serving a request
       # before it times out. This should include the time required to cache the models and setup the pipelines.
@@ -40,4 +58,5 @@ services:
       - 8501:8501
     restart: on-failure
     environment:
-      - HAYSTACK_URL=http://haystack-api:8000
+      - HAYSTACK_DOC_RETRIEVAL_URL=http://haystack-api-doc-retrieval:8000
+      - HAYSTACK_QA_URL=http://haystack-api-qa:8000
